--- a/app/src/main/res/layout/fragment_for_option_landscape.xml
+++ b/app/src/main/res/layout/fragment_for_option_landscape.xml
@@ -1,92 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/option_title_landscape"
-        android:layout_height="0px"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:id="@+id/question_in_fragment_landscape"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_weight="1"/>
-
-
-    <ScrollView
+        android:layout_below="@+id/option_title_landscape"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="5"
-        android:fillViewport="true">
+        android:layout_height="wrap_content" />
 
-
-        <TextView
-            android:id="@+id/question_in_fragment_landscape"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
-            android:maxLength="140"
-            android:layout_width="match_parent"
-            android:layout_height="0px" />
-
-
-    </ScrollView>
 
     <TableLayout
+        android:layout_below="@+id/question_in_fragment_landscape"
+        android:stretchColumns="1"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="2">
+        android:layout_height="wrap_content">
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TableRow android:layout_weight="1">
             <Button
-                android:textSize="20sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
                 android:id="@+id/option1_in_fragment_landscape"
                 android:layout_gravity="center"
                 android:layout_height="match_parent"
-                android:layout_width="0px"
-                android:layout_weight="1" />
+                android:layout_width="0dp"
+                android:layout_weight="1"/>
 
 
             <Button
-                android:textSize="20sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
                 android:id="@+id/option2_in_fragment_landscape"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_width="0px"
-                android:layout_weight="1" />
+                android:layout_width="0dp"
+                android:layout_weight="1"/>
         </TableRow>
 
 
-        <TableRow android:layout_weight="1">
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <Button
-                android:textSize="20sp"
+                android:textSize="10sp"
+                android:layout_weight="1"
                 android:textStyle="bold"
                 android:id="@+id/option3_in_fragment_landscape"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_width="0px"
-                android:layout_weight="1" />
+                android:layout_width="0dp" />
 
 
             <Button
-                android:textSize="20sp"
+                android:textSize="10sp"
+                android:layout_weight="1"
                 android:textStyle="bold"
                 android:id="@+id/option4_in_fragment_landscape"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_width="0px"
-                android:layout_weight="1" />
+                android:layout_width="0dp" />
         </TableRow>
 
 
     </TableLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
