--- a/app/src/main/res/layout/fragment_for_option_portrait.xml
+++ b/app/src/main/res/layout/fragment_for_option_portrait.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:id="@+id/option_title_portrait"/>
 
-    <ScrollView
+    <TextView
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:id="@+id/question_in_fragment_portrait"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/option_title_portrait"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="5"
-        android:fillViewport="true">
-
-        <TextView
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
-            android:id="@+id/question_in_fragment_portrait"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </ScrollView>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
-        android:layout_weight="4"
-        android:layout_height="0px"
+        android:layout_below="@+id/question_in_fragment_portrait"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_width="match_parent">
 
         <Button
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:id="@+id/option1_in_fragment_portrait"
             android:layout_gravity="center"
@@ -48,7 +40,7 @@
             android:layout_width="match_parent" />
 
         <Button
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:id="@+id/option2_in_fragment_portrait"
             android:layout_height="wrap_content"
@@ -57,7 +49,7 @@
 
 
         <Button
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:id="@+id/option3_in_fragment_portrait"
             android:layout_height="wrap_content"
@@ -65,7 +57,7 @@
             android:layout_gravity="center"/>
 
         <Button
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:id="@+id/option4_in_fragment_portrait"
             android:layout_height="wrap_content"
@@ -74,4 +66,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
