--- a/app/src/main/res/layout/layout_jlpt_exam_content.xml
+++ b/app/src/main/res/layout/layout_jlpt_exam_content.xml
@@ -1,76 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:fillViewport="true">
 
+    <RelativeLayout
 
-    <FrameLayout
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:id="@+id/question_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <LinearLayout
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:id="@+id/navigation"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/question_container"
-        android:layout_alignParentBottom="true"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/backward_arrow"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_width="0px"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_arrow_back_black_24dp" />
+        <RelativeLayout
+            android:id="@+id/navigation"
+            android:layout_alignParentTop="true"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="2">
+            <ImageView
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_arrow_back_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/backward_arrow" />
 
-            <TextView
-                android:id="@+id/question_counting"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="45sp"
-                android:layout_height="0px"
-                android:layout_width="match_parent"/>
+            <ImageView
+                android:id="@+id/forward_arrow"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_arrow_forward_black_24dp"/>
+
+            <LinearLayout
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_toEndOf="@+id/backward_arrow"
+                android:layout_toRightOf="@+id/backward_arrow"
+                android:layout_toLeftOf="@+id/forward_arrow"
+                android:layout_toStartOf="@+id/forward_arrow"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/question_counting"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:layout_weight="1"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent" />
+
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:id="@+id/time_remaining"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <FrameLayout
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/navigation"
+            android:id="@+id/question_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </RelativeLayout>
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:textSize="45sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:id="@+id/time_remaining"/>
-
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/forward_arrow"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_width="0px"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_arrow_forward_black_24dp"/>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</ScrollView>
