--- a/app/src/main/res/layout/layout_modify_user_add_on.xml
+++ b/app/src/main/res/layout/layout_modify_user_add_on.xml
@@ -62,6 +62,7 @@
                     android:layout_height="wrap_content" />
 
                 <Button
+                    android:background="@drawable/app_button"
                     android:text="@string/make_change"
                     android:id="@+id/make_change"
                     android:layout_alignParentEnd="true"
