--- a/app/src/main/res/layout/fragment_for_option_landscape.xml
+++ b/app/src/main/res/layout/fragment_for_option_landscape.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content">
 
         <TableRow
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -40,8 +41,11 @@
                 android:textStyle="bold"
                 android:id="@+id/option1_in_fragment_landscape"
                 android:layout_gravity="center"
+                android:background="@drawable/app_button"
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"/>
 
 
@@ -52,6 +56,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_width="0dp"
+                android:background="@drawable/app_button"
                 android:layout_weight="1"/>
         </TableRow>
 
@@ -63,6 +68,9 @@
                 android:textSize="10sp"
                 android:layout_weight="1"
                 android:textStyle="bold"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/app_button"
                 android:id="@+id/option3_in_fragment_landscape"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -73,6 +81,7 @@
                 android:textSize="10sp"
                 android:layout_weight="1"
                 android:textStyle="bold"
+                android:background="@drawable/app_button"
                 android:id="@+id/option4_in_fragment_landscape"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
