--- a/app/src/main/res/layout/fragment_next_study.xml
+++ b/app/src/main/res/layout/fragment_next_study.xml
@@ -21,6 +21,7 @@
         android:layout_height="270dp"/>
 
     <Button
+        android:background="@drawable/app_button"
         android:id="@+id/cancel_next_study_dialog"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:background="@drawable/app_button"
         android:text="@string/agree"
         android:textSize="20sp"
         android:layout_toLeftOf="@+id/cancel_next_study_dialog"
